--- a/contact.htm
+++ b/contact.htm
@@ -38,13 +38,13 @@
    </a>
    <p class="ex">Contact me!</p>
     </div>
-    <form action="https://formsubmit.co/amniotic.9@gmail.com" method="POST"></form>
+    <form action="https://formsubmit.co/muni.lumi23@gmail.com" method="POST">
 <div class="container">
  
 
     <label for="fname">Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
+    <input type="email" id="email" name="email" placeholder="Your email..">
     
 
     <label for="country">Country</label>
@@ -59,8 +59,9 @@
 
     <input type="submit" value="Submit">
 
-  </form>
+  
 </div>
+</form>
 
 </div>
 <pre id="log"></pre>
