--- a/contact.htm
+++ b/contact.htm
@@ -38,7 +38,9 @@
    </a>
    <p class="ex">Contact me!</p>
     </div>
-    <form action="https://formsubmit.co/muni.lumi23@gmail.com" method="POST">
+    <form action="https://formsubmit.co/0aeedb067ccdfe7037a55c7fa1074add" method="POST">
+      <input type="text" name="_honey" style="display: none;">
+      <input type="hidden" name="_captcha" style="display: none;">
 <div class="container">
  
 
