--- a/contact.htm
+++ b/contact.htm
@@ -40,7 +40,7 @@
     </div>
     <form action="https://formsubmit.co/0aeedb067ccdfe7037a55c7fa1074add" method="POST">
       <input type="text" name="_honey" style="display: none;">
-      <input type="hidden" name="_captcha" style="display: none;">
+      <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://munii-3.github.io/My-Website/success.htm">
 <div class="container">
  
