--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hej hej</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="mystyle3.css">
+        <link rel="stylesheet" href="mystyle.css">
 
     </head>
        
@@ -22,30 +22,35 @@
   <a href="contact.htm">Contact</a>
   <a href="myself.htm">Myself</a>
 </div>
+
 <div class="row">
     <div class="side">
         <h2>About Me</h2>
         <h5>Artwork</h5>
-        <div class="img"
+        <div class="fakeimg"
         style="height:200px;">Image</div>
     </div>
-
     
 <div id="this?element" class="main">
-   
-   <div class="menu-item"><a href=myself.htm>
+   <div class="menu-item"> <a href=myself.htm>
     <img src="c:\Users\Administrator\Downloads\TOOFOOFEEFA.jpg" alt="Image Button">
    </a>
-   <p class="ex">About Me!</p>
+   <p class="ex">About myself</p>
     </div>
-    <div class="fakeimg" style="height: 274.4px;">
-    <p class="exp">heyo</p>
+   <div class="menu-item"><a href=interests.htm>
+    <img src="c:\Users\Administrator\Downloads\download.jpg" alt="Image Button">
+   </a>
+   <p class="ex">My Interests</p>
+    </div>
+   <div class="menu-item"><a href=contact.htm>
+    <img src="c:\Users\Administrator\Downloads\PNG.jpg" alt="Image Button">
+   </a>
+   <p class="ex">Contact me!</p>
     </div>
 </div>
 <pre id="log"></pre>
 
         </body>     
-
 
 
 
