--- a/interests.htm
+++ b/interests.htm
@@ -17,7 +17,7 @@
 </div>
 
  <div class="navbar">
-  <a href="welcome.html">Home</a>
+  <a href="index.html.html">Home</a>
   <a href="interests.htm">Interests</a>
   <a href="contact.htm">Contact</a>
   <a href="myself.htm">Myself</a>
