--- a/success.htm
+++ b/success.htm
@@ -17,7 +17,7 @@
 </div>
 
  <div class="navbar">
-  <a href="welcome.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="interests.htm">Interests</a>
   <a href="contact.htm">Contact</a>
   <a href="myself.htm">Myself</a>
@@ -51,3 +51,4 @@
 
 
 </html>
+
