--- a/success.htm
+++ b/success.htm
@@ -36,7 +36,7 @@
    <div class="menu-item"><a href=contact.htm>
     <img src="c:\Users\Administrator\Downloads\PNG.jpg" alt="Image Button">
    </a>
-   <p class="ex">Contact me!</p>
+   <p class="ex">Press me!</p>
     </div>
 <p>Success! We will get back to you soon </p>
 
@@ -51,4 +51,5 @@
 
 
 </html>
+
 
