--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
     
 <div id="this?element" class="main">
    <div class="menu-item"> <a href=myself.htm>
-    <img src="c:\Users\Administrator\Downloads\TOOFOOFEEFA.jpg" alt="Image Button">
+    <img src="c:\Users\Administrator\OneDrive\Documents\html\TOOFOOFEEFA.jpg" alt="Image Button">
    </a>
    <p class="ex">About myself</p>
     </div>
    <div class="menu-item"><a href=interests.htm>
-    <img src="c:\Users\Administrator\Downloads\download.jpg" alt="Image Button">
+    <img src="c:\Users\Administrator\OneDrive\Documents\html\download.jpg" alt="Image Button">
    </a>
    <p class="ex">My Interests</p>
     </div>
    <div class="menu-item"><a href=contact.htm>
-    <img src="c:\Users\Administrator\Downloads\PNG.jpg" alt="Image Button">
+    <img src="c:\Users\Administrator\OneDrive\Documents\html\PNG.jpg" alt="Image Button">
    </a>
    <p class="ex">Contact me!</p>
     </div>
@@ -57,4 +57,5 @@
 
 
 </html>
+
 
