--- a/success.htm
+++ b/success.htm
@@ -34,9 +34,9 @@
 <div id="this?element" class="main">
    
    <div class="menu-item"><a href=contact.htm>
-    <img src="c:\Users\Administrator\Downloads\PNG.jpg" alt="Image Button">
+    <img src="c:\Users\Administrator\OneDrive\Documents\html\PNG.jpg" alt="Image Button">
    </a>
-   <p class="ex">Press me!</p>
+   <p class="ex">Let's Go Back!</p>
     </div>
 <p>Success! We will get back to you soon </p>
 
@@ -51,5 +51,6 @@
 
 
 </html>
+
 
 
