--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
 <div id="this?element" class="main">
    <div class="menu-item"> <a href=myself.htm>
-    <img src="C:\Users\Administrator\OneDrive\Pictures\TOOFOOFEEFA.jpg" alt="Image Button">
+    <img src="Pictures\TOOFOOFEEFA.jpg" alt="Image Button">
    </a>
    <p class="ex">About myself</p>
     </div>
@@ -57,6 +57,7 @@
 
 
 </html>
+
 
 
 
