--- a/contact.htm
+++ b/contact.htm
@@ -34,7 +34,7 @@
 <div id="this?element" class="main">
    
    <div class="menu-item"><a href=contact.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\PNG.jpg" alt="Image Button">
+    <img src="PNG.jpg" alt="Image Button">
    </a>
    <p class="ex">Contact me!</p>
     </div>
@@ -77,5 +77,6 @@
 
 
 </html>
+
 
 
