--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
    <p class="ex">About myself</p>
     </div>
    <div class="menu-item"><a href=interests.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\download.jpg" alt="Image Button">
+    <img src="download.jpg" alt="Image Button">
    </a>
    <p class="ex">My Interests</p>
     </div>
    <div class="menu-item"><a href=contact.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\PNG.jpg" alt="Image Button">
+    <img src="PNG.jpg" alt="Image Button">
    </a>
    <p class="ex">Contact me!</p>
     </div>
@@ -57,6 +57,7 @@
 
 
 </html>
+
 
 
 
