--- a/success.htm
+++ b/success.htm
@@ -34,7 +34,7 @@
 <div id="this?element" class="main">
    
    <div class="menu-item"><a href=contact.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\PNG.jpg" alt="Image Button">
+    <img src="PNG.jpg" alt="Image Button">
    </a>
    <p class="ex">Let's Go Back!</p>
     </div>
@@ -51,6 +51,7 @@
 
 
 </html>
+
 
 
 
