--- a/interests.htm
+++ b/interests.htm
@@ -34,7 +34,7 @@
 <div id="this?element" class="main">
    
    <div class="menu-item"><a href=interests.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\download.jpg" alt="Image Button">
+    <img src="download.jpg" alt="Image Button">
    </a>
    <p class="ex">My Interests</p>
     </div>
@@ -52,5 +52,6 @@
 
 
 </html>
+
 
 
