--- a/myself.htm
+++ b/myself.htm
@@ -34,7 +34,7 @@
 <div id="this?element" class="main">
    
    <div class="menu-item"><a href=myself.htm>
-    <img src="c:\Users\Administrator\OneDrive\Documents\html\TOOFOOFEEFA.jpg" alt="Image Button">
+    <img src="TOOFOOFEEFA.jpg" alt="Image Button">
    </a>
    <p class="ex">About Me!</p>
     </div>
@@ -52,5 +52,6 @@
 
 
 </html>
+
 
 
