--- a/contact.htm
+++ b/contact.htm
@@ -33,7 +33,7 @@
     
 <div id="this?element" class="main">
    
-   <div class="menu-item"><a href=contact.htm>
+   <div class="menu-item"><a href=index.html>
     <img src="PNG.jpg" alt="Image Button">
    </a>
    <p class="ex">Contact me!</p>
@@ -77,6 +77,7 @@
 
 
 </html>
+
 
 
 
