--- a/interests.htm
+++ b/interests.htm
@@ -33,7 +33,7 @@
     
 <div id="this?element" class="main">
    
-   <div class="menu-item"><a href=interests.htm>
+   <div class="menu-item"><a href=index.html>
     <img src="download.jpg" alt="Image Button">
    </a>
    <p class="ex">My Interests</p>
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
