--- a/myself.htm
+++ b/myself.htm
@@ -33,7 +33,7 @@
     
 <div id="this?element" class="main">
    
-   <div class="menu-item"><a href=myself.htm>
+   <div class="menu-item"><a href=index.html>
     <img src="TOOFOOFEEFA.jpg" alt="Image Button">
    </a>
    <p class="ex">About Me!</p>
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
