--- a/myself.htm
+++ b/myself.htm
@@ -25,9 +25,9 @@
 <div class="row">
     <div class="side">
         <h2>About Me</h2>
-        <h5>Artwork</h5>
-        <div class="img"
-        style="height:200px;">Image</div>
+
+        <img src="https://dk2dv4ezy246u.cloudfront.net/widgets/sSYVW7Srzgv.jpg" 
+        style="height:200px;">Honkai Star Rail</div>
     </div>
 
     
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
