--- a/myself.htm
+++ b/myself.htm
@@ -26,8 +26,8 @@
     <div class="side">
         <h2>About Me</h2>
 
-        <img src="https://dk2dv4ezy246u.cloudfront.net/widgets/sSYVW7Srzgv.jpg" 
-        style="height:200px;">Honkai Star Rail</div>
+    <div>honkai star rail<img src="https://dk2dv4ezy246u.cloudfront.net/widgets/sSYVW7Srzgv.jpg" 
+        style="height:200px;">
     </div>
 
     
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
