--- a/myself.htm
+++ b/myself.htm
@@ -27,7 +27,7 @@
         <h2>About Me</h2>
 
     <div>honkai star rail<img src="https://dk2dv4ezy246u.cloudfront.net/widgets/sSYVW7Srzgv.jpg" 
-        style="height:200px;">
+        style="height:200px;"></div>
     </div>
 
     
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
