--- a/interests.htm
+++ b/interests.htm
@@ -24,10 +24,10 @@
 </div>
 <div class="row">
     <div class="side">
-        <h2>About Me</h2>
-        <h5>Artwork</h5>
-        <div class="img"
-        style="height:200px;">Image</div>
+        <h2>Interests</h2>
+        <h5>Artwork from'em</h5>
+        <div><img src="https://dk2dv4ezy246u.cloudfront.net/widgets/sSYVW7Srzgv.jpg" 
+        style="height:200px;">honkai star rail</div>
     </div>
 
     
@@ -52,6 +52,7 @@
 
 
 </html>
+
 
 
 
