--- a/myself.htm
+++ b/myself.htm
@@ -8,6 +8,7 @@
     </head>
        
    <body>
+       <div class="content">
     <div class="header">
         <p>I'd have an img border here ngl</p>
     </div>
@@ -22,9 +23,8 @@
   <a href="contact.htm">Contact</a>
   <a href="myself.htm">Myself</a>
 </div>
-<div class="row">
-    <div class="side">
-        <h2>About Me</h2>
+
+    
 
    
 
@@ -41,7 +41,7 @@
     </div>
 </div>
 <pre id="log"></pre>
-
+    </div>
         </body>     
 
 
@@ -50,6 +50,7 @@
 
 
 </html>
+
 
 
 
