--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <a href="contact.htm">Contact</a>
   <a href="myself.htm">Myself</a>
 </div>
-
+<dic class="row">
 
 <div id="this?element" class="main">
    <div class="menu-item"> <a href=myself.htm>
@@ -50,6 +50,7 @@
 
 
 </html>
+
 
 
 
